Fix skills images to align-center

--- a/Styles/components/Skill-Tec.css
+++ b/Styles/components/Skill-Tec.css
@@ -4,19 +4,13 @@
     height: 90px;
 
     display:flex;
+    align-items: center;
     gap: 25px;
 
     color: var(--color-third);
     font-weight: 400;
     font-size: calc(var(--font-size) * 2.5) ;
     font-family: var(--font-PressStart2P);
-}
-
-.Icon {
-    width: auto;
-    height: 90px;
-    
-    order: -1;
 }
 
 .Skill-Tec .SkillDetails {
